@@ -1,5 +1,6 @@
 # CHANGES TO v0.1.3 #
 
+ * Set `stringsAsFactors = FALSE` as default for reading tabular data. (#4)
  * Added support for HTTPS imports. (#1, h/t Christopher Gandrud)
  * Added support for automatic file naming in `export` based on object name and file format. (#5)
  * Exposed `convert` function.
